--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "foundation-sites": "^6.4.1",
     "gulp": "^3.9.1",
     "gulp-develop-server": "^0.5.2",
+    "gulp-less": "^3.3.2",
     "gulp-nodemon": "^2.2.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
